--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,10 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-	<title>My Webpage!</title>
-</head>
-<body>
-Yes Sir!
-</body>
-		<h1></h1>
+	<head>
+		<title>My Webpage!</title>
+	</head>
+	<body>
+		<h1>Yes Sir!</h1>
+	</body>
 </html>
